welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: not found: value string_of_Int
		ecritMessage(string_of_Int(j));
                             ^